Fixing image size issue on Safari mobile.

--- a/assets/styles/portfolio.css
+++ b/assets/styles/portfolio.css
@@ -20,7 +20,7 @@ div > a > img {
 
 div > a > img {
   width: 15rem;
-  height: auto;
+  height: 15rem;
 }
 
 div > a:hover,
